--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,10 +2,12 @@
 .nav{
   grid-area: n;
   background-color: rgb(72, 72, 182);
+  padding: 24px;
 }
-.item{
-  color:azure;
+.item a{
+  color: aliceblue;
+  text-decoration: none;
 }
-.item.active{
+.item a[class="active"]{
   color: gold;
 }
